// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FileUpload handles file upload failure 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-66"
  >
    <div
      class="MuiBox-root MuiBox-root-67 makeStyles-dropZone-55"
    >
      <section>
        <div
          class="MuiBox-root MuiBox-root-70"
          tabindex="0"
        >
          <input
            autocomplete="off"
            data-testid="drop-zone-input"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="MuiBox-root MuiBox-root-71"
          >
            <svg
              class="makeStyles-textSpacing-68"
              role="presentation"
              style="width: 3rem; height: 3rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10V16H15V10H19L12,3L5,10H9M12,5.8L14.2,8H13V14H11V8H9.8L12,5.8M19,18H5V20H19V18Z"
                style="fill: currentColor;"
              />
            </svg>
            <h3
              class="MuiTypography-root makeStyles-textSpacing-68 MuiTypography-h3"
            >
              Drag your files here, or 
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-browseLink-69 MuiTypography-colorPrimary"
              >
                Browse Files
              </a>
            </h3>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file size: 50 MB
            </span>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file count: 10
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      class="MuiBox-root MuiBox-root-72"
    >
      <ul
        class="MuiList-root MuiList-padding"
      >
        <li
          class="MuiListItem-root makeStyles-uploadListItem-56 MuiListItem-gutters"
        >
          <div
            class="MuiBox-root MuiBox-root-85"
          >
            <div
              class="MuiBox-root MuiBox-root-86"
            >
              <div
                class="MuiBox-root MuiBox-root-87"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  testpng.txt
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  File was evil!
                </p>
              </div>
              <div
                class="MuiBox-root MuiBox-root-88"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="0"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-failedColor-64 MuiLinearProgress-determinate"
                  role="progressbar"
                >
                  <div
                    class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary makeStyles-failedBarColor-65 MuiLinearProgress-bar1Determinate"
                    style="transform: translateX(-100%);"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-89"
            >
              <div
                class="MuiBox-root MuiBox-root-90"
              >
                <button
                  aria-label="clear file"
                  class="MuiButtonBase-root MuiIconButton-root"
                  tabindex="0"
                  title="Clear File"
                  type="button"
                >
                  <span
                    class="MuiIconButton-label"
                  >
                    <svg
                      class="makeStyles-errorIcon-58"
                      role="presentation"
                      style="width: 1.5rem; height: 1.5rem;"
                      viewBox="0 0 24 24"
                    >
                      <path
                        d="M13.46,12L19,17.54V19H17.54L12,13.46L6.46,19H5V17.54L10.54,12L5,6.46V5H6.46L12,10.54L17.54,5H19V6.46L13.46,12Z"
                        style="fill: currentColor;"
                      />
                    </svg>
                  </span>
                  <span
                    class="MuiTouchRipple-root"
                  />
                </button>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileUpload handles file upload failure 2`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-66"
  >
    <div
      class="MuiBox-root MuiBox-root-67 makeStyles-dropZone-55"
    >
      <section>
        <div
          class="MuiBox-root MuiBox-root-70"
          tabindex="0"
        >
          <input
            autocomplete="off"
            data-testid="drop-zone-input"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="MuiBox-root MuiBox-root-71"
          >
            <svg
              class="makeStyles-textSpacing-68"
              role="presentation"
              style="width: 3rem; height: 3rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10V16H15V10H19L12,3L5,10H9M12,5.8L14.2,8H13V14H11V8H9.8L12,5.8M19,18H5V20H19V18Z"
                style="fill: currentColor;"
              />
            </svg>
            <h3
              class="MuiTypography-root makeStyles-textSpacing-68 MuiTypography-h3"
            >
              Drag your files here, or 
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-browseLink-69 MuiTypography-colorPrimary"
              >
                Browse Files
              </a>
            </h3>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file size: 50 MB
            </span>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file count: 10
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      class="MuiBox-root MuiBox-root-72"
    />
  </div>
</DocumentFragment>
`;

exports[`FileUpload handles file upload success 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-30"
  >
    <div
      class="MuiBox-root MuiBox-root-31 makeStyles-dropZone-19"
    >
      <section>
        <div
          class="MuiBox-root MuiBox-root-34"
          tabindex="0"
        >
          <input
            autocomplete="off"
            data-testid="drop-zone-input"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="MuiBox-root MuiBox-root-35"
          >
            <svg
              class="makeStyles-textSpacing-32"
              role="presentation"
              style="width: 3rem; height: 3rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10V16H15V10H19L12,3L5,10H9M12,5.8L14.2,8H13V14H11V8H9.8L12,5.8M19,18H5V20H19V18Z"
                style="fill: currentColor;"
              />
            </svg>
            <h3
              class="MuiTypography-root makeStyles-textSpacing-32 MuiTypography-h3"
            >
              Drag your files here, or 
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-browseLink-33 MuiTypography-colorPrimary"
              >
                Browse Files
              </a>
            </h3>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file size: 50 MB
            </span>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file count: 10
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      class="MuiBox-root MuiBox-root-36"
    >
      <ul
        class="MuiList-root MuiList-padding"
      >
        <li
          class="MuiListItem-root makeStyles-uploadListItem-20 MuiListItem-gutters"
        >
          <div
            class="MuiBox-root MuiBox-root-49"
          >
            <div
              class="MuiBox-root MuiBox-root-50"
            >
              <div
                class="MuiBox-root MuiBox-root-51"
              >
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  testpng.txt
                </p>
                <p
                  class="MuiTypography-root MuiTypography-body1"
                >
                  Complete
                </p>
              </div>
              <div
                class="MuiBox-root MuiBox-root-52"
              >
                <div
                  aria-valuemax="100"
                  aria-valuemin="0"
                  aria-valuenow="100"
                  class="MuiLinearProgress-root MuiLinearProgress-colorPrimary makeStyles-completeColor-26 MuiLinearProgress-determinate"
                  role="progressbar"
                >
                  <div
                    class="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary makeStyles-completeBarColor-27 MuiLinearProgress-bar1Determinate"
                    style="transform: translateX(0%);"
                  />
                </div>
              </div>
            </div>
            <div
              class="MuiBox-root MuiBox-root-53"
            >
              <div
                class="MuiBox-root MuiBox-root-54"
              >
                <svg
                  class="makeStyles-completeIcon-21"
                  role="presentation"
                  style="width: 1.5rem; height: 1.5rem;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M21,7L9,19L3.5,13.5L4.91,12.09L9,16.17L19.59,5.59L21,7Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`FileUpload matches the snapshot 1`] = `
<DocumentFragment>
  <div
    class="MuiBox-root MuiBox-root-12"
  >
    <div
      class="MuiBox-root MuiBox-root-13 makeStyles-dropZone-1"
    >
      <section>
        <div
          class="MuiBox-root MuiBox-root-16"
          tabindex="0"
        >
          <input
            autocomplete="off"
            data-testid="drop-zone-input"
            multiple=""
            style="display: none;"
            tabindex="-1"
            type="file"
          />
          <div
            class="MuiBox-root MuiBox-root-17"
          >
            <svg
              class="makeStyles-textSpacing-14"
              role="presentation"
              style="width: 3rem; height: 3rem;"
              viewBox="0 0 24 24"
            >
              <path
                d="M9,10V16H15V10H19L12,3L5,10H9M12,5.8L14.2,8H13V14H11V8H9.8L12,5.8M19,18H5V20H19V18Z"
                style="fill: currentColor;"
              />
            </svg>
            <h3
              class="MuiTypography-root makeStyles-textSpacing-14 MuiTypography-h3"
            >
              Drag your files here, or 
              <a
                class="MuiTypography-root MuiLink-root MuiLink-underlineHover makeStyles-browseLink-15 MuiTypography-colorPrimary"
              >
                Browse Files
              </a>
            </h3>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file size: 50 MB
            </span>
            <span
              class="MuiTypography-root MuiTypography-subtitle2 MuiTypography-colorTextSecondary"
            >
              Maximum file count: 10
            </span>
          </div>
        </div>
      </section>
    </div>
    <div
      class="MuiBox-root MuiBox-root-18"
    />
  </div>
</DocumentFragment>
`;
